endpoint-exposer/output/api-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd/update-api-5b7636e1-304b-4ef9-92a9-2a0b102686f4/apply/httproute-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd-private
  namespace: nullplatform
  labels:
    nullplatform.com/managed-by: endpoint-exposer
    nullplatform.com/service-id: "fbcf7a60-8ca8-4bf2-b1b5-5c59bb5bc4fd"
    app.kubernetes.io/name: api
spec:
  hostnames:
  - api-private.edenred.nullimplementation.com
